--- a/lab02/kushner-bio.html
+++ b/lab02/kushner-bio.html
@@ -28,7 +28,7 @@
                 <li>Adobe Illustrator</li>
             </ul>
         <hr>
-        &copy;
+        &copy; 2025
     </body>
     
     </html>
