--- a/lab06/kushner-bio.html
+++ b/lab06/kushner-bio.html
@@ -3,6 +3,7 @@
     <head>
     <meta charset="utf-8">
     <title>Kaitlyn Kushner - Bio</title>
+    <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -22,7 +23,7 @@
         Outside of work, I enjoy hiking, listening to music, exploring, and (most importantly) spending time with loved ones. I love to meet new people and stay connected! Feel free to reach out at kaitlynkushner1@gmail.com
         </p>
 
-        <h3>Skills</h3>
+        <h2>Skills</h2>
         <p>
             <ul>
                 <li>Adobe Premiere Pro</li>
